# alpine

./: .actrc  .env.sample  .gitignore  CNAME  README.md  hi@fabricio.dev-63f73b9a.rsa.pub
.github/workflows/: build.yml
aports/autobrr/: APKBUILD  autobrr.confd  autobrr.initd
aports/bazarr/: APKBUILD  bazarr.confd  bazarr.initd
aports/py3-sabyenc/: APKBUILD
aports/qbit_manage/: APKBUILD
aports/sabnzbd/: 0001-move-assets.patch  APKBUILD  pyproject.toml  sabnzbd.confd  sabnzbd.initd
aports/sonarr-dev/: APKBUILD  package_info  sonarr.confd  sonarr.initd
aports/tautulli/: 0002-disable-analytics.patch  APKBUILD  tautulli.confd  tautulli.initd  tautulli.pre-install
aports/unrar/: APKBUILD  makefile.patch
aports/whisparr-dev/: 0001-disable-restart.patch  APKBUILD  whisparr-dev.pre-install  whisparr.confd  whisparr.initd
repo/: hi@fabricio.dev-63f73b9a.rsa.pub
x86_64/: autobrr-openrc-1.19.0-r0.apk  bazarr-openrc-1.2.0-r0.apk  py3-sabyenc-5.4.4-r0.apk  qbit_manage-3.4.4-r0.apk  sabnzbd-3.7.2-r0.apk  sabnzbd-3.7.2-r1.apk  sabnzbd-openrc-3.7.2-r0.apk  sabnzbd-openrc-3.7.2-r1.apk  sonarr-dev-openrc-4.0.0.391-r0.apk  sonarr-dev-openrc-4.0.0.392-r0.apk  sonarr-dev-openrc-4.0.0.394-r0.apk  sonarr-dev-openrc-4.0.0.396-r0.apk  sonarr-dev-openrc-4.0.0.396-r1.apk  sonarr-dev-openrc-4.0.0.397-r1.apk  sonarr-dev-openrc-4.0.0.400-r1.apk  tautulli-openrc-2.11.1-r0.apk  tautulli-openrc-2.11.1-r3.apk  unrar-6.2.6-r0.apk  unrar-doc-6.2.6-r0.apk  whisparr-dev-openrc-2.0.0.131-r0.apk  whisparr-dev-openrc-2.0.0.134-r0.apk  whisparr-dev-openrc-2.0.0.134-r1.apk
(+95 files in other folders)
